Floors on mobile fix

--- a/app/assets/stylesheets/apartments/_show_page.css.scss
+++ b/app/assets/stylesheets/apartments/_show_page.css.scss
@@ -107,6 +107,10 @@
           height: rem(54);
           left: rem(-55);
           top: rem(20);
+
+          @media #{$small-only} {
+            background: none;
+          }
         }
 
         &.plan {
